# DOPE

./: .clang-format  .gitignore  DOPE-ASS SRS.md  README.md  bce_gui_preset.json  imgui.ini  platformio.ini  run_native_gui.bat
DOPE/: CMakeLists.txt  README.md  platformio.ini
DOPE/scripts/: flash_esp32.sh
DOPE/src/: gui_main.cpp  imgui_harness.cpp  imgui_harness.h
DOPE/test/: test_ahrs.cpp  test_atmosphere.cpp  test_ballistic_solver.cpp  test_cant.cpp  test_coriolis.cpp  test_firing_solution.cpp  test_spin_drift.cpp
lib/bce/: library.json
lib/bce/include/bce/: bce_api.h  bce_config.h  bce_types.h
lib/bce/src/: bce_api.cpp
lib/bce/src/ahrs/: ahrs_interface.h  ahrs_manager.cpp  ahrs_manager.h  madgwick.cpp  madgwick.h  mahony.cpp  mahony.h
lib/bce/src/atmo/: atmosphere.cpp  atmosphere.h
lib/bce/src/corrections/: cant.cpp  cant.h  wind.cpp  wind.h
lib/bce/src/drag/: drag_model.cpp  drag_model.h  drag_tables.h
lib/bce/src/engine/: bce_engine.cpp  bce_engine.h
lib/bce/src/mag/: mag_calibration.cpp  mag_calibration.h
lib/bce/src/solver/: solver.cpp  solver.h
scripts/: run_native_gui.ps1
src/: gui_main.cpp  imgui_all.cpp  imgui_impl_dx11_wrap.cpp  imgui_impl_win32_wrap.cpp  main.cpp
test/: test_ahrs.cpp  test_atmosphere.cpp  test_cartridges.cpp  test_corrections.cpp  test_drag.cpp  test_integration.cpp  test_mag.cpp  test_main.cpp  test_solver.cpp
